<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:stretchColumns="1, 3"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="40dp"/>

        <TextView
            android:id="@+id/per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/per_100g"/>

        <TextView
            android:id="@+id/per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/per_portion" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/energy"
            android:height="30dp"/>

        <TextView
            android:id="@+id/energy_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/energy_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/fat"
            android:height="30dp"/>

        <TextView
            android:id="@+id/fat_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/fat_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/with_saturated_fatty_acids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/with_saturated_fatty_acids"
            android:height="30dp"/>

        <TextView
            android:id="@+id/with_saturated_fatty_acids_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/with_saturated_fatty_acids_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/carbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/carbohydrates"
            android:height="30dp"/>

        <TextView
            android:id="@+id/carbohydrates_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/carbohydrates_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/with_sugars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/with_sugars"
            android:height="30dp"/>

        <TextView
            android:id="@+id/with_sugars_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/with_sugars_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dietary_fiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/dietary_fiber"
            android:height="30dp"/>

        <TextView
            android:id="@+id/dietary_fiber_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/dietary_fiber_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/proteins"
            android:height="30dp"/>

        <TextView
            android:id="@+id/proteins_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/proteins_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/salt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/salt"
            android:height="30dp"/>

        <TextView
            android:id="@+id/salt_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/salt_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/sodium"
            android:height="30dp"/>

        <TextView
            android:id="@+id/sodium_quantity_per_100g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/sodium_quantity_per_portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/quantity" />
    </TableRow>
</TableLayout>