<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/placeholder"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="product_title, product_mark" />

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/product_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/product_image" />

        <TextView
            android:id="@+id/product_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_mark"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/product_title" />

        <ImageView
            android:layout_width="78dp"
            android:layout_height="42dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/nutriscore_e"
            app:layout_constraintLeft_toLeftOf="@id/title_group"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_image" />

        <TextView
            android:id="@+id/product_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/product_mark" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/product_barcode" />

        <TextView
            android:id="@+id/product_sold_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/product_sold_in"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/product_quantity" />

        <TextView
            android:id="@+id/product_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/product_ingredients"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/product_sold_in" />

        <TextView
            android:id="@+id/product_allergenic_substances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/product_allergenic_substances"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/product_ingredients" />

        <TextView
            android:id="@+id/product_additives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/product_additives"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/product_allergenic_substances" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>